--- a/PS0/1 - Introduction to the Jupyter notebook.ipynb
+++ b/PS0/1 - Introduction to the Jupyter notebook.ipynb
@@ -6,7 +6,10 @@
     "deletable": false
    },
    "source": [
-    "In this class, you will be using the Jupyter Notebook to write code and written responses to assignments. "
+    "In this class, you will be using the Jupyter Notebook to write code and written responses to assignments. \n",
+    "\n",
+    "### Validation\n",
+    "Problem set notebooks will include cells containing tests for your code. Make sure you run these cells. **If your code does not pass the test cells, you did NOT get things right.** "
    ]
   },
   {
@@ -648,7 +651,7 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -662,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.5"
   },
   "toc": {
    "base_numbering": 1,
